kube/dev/fcs-deployment-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose -f ./kube-docker-compose.yml_kube_ignore -n fcs convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: fcs-dev
  name: fcs
  namespace: fcs-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: fcs-dev
  template:
    metadata:
      annotations:
        kompose.cmd: kompose -f ./kube-docker-compose.yml_kube_ignore -n fcs convert
        kompose.version: 1.35.0 (9532ceef3)
      labels:
        io.kompose.service: fcs-dev
    spec:
      containers:
        - args:
            - python3
            - fcs.py
            - -i
            - "15"
            - -w
            - -v

          image: registry.brauhausdc.org:5000/fcs/fcs:25.2.12
          name: fcs
          ports:
            - containerPort: 8999
              protocol: TCP
          securityContext:
            privileged: true
          resources:
            requests:
              cpu: 250m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 256Mi
      restartPolicy: Always

      tolerations:
        - key: "arm64"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
        - key: "adsb"
          operator: "Equal"
          value: "true"
          effect: "NoSchedule"
