kube/dev/fcs-service-dev.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f ./kube-docker-compose.yml_kube_ignore -n fcs convert
    kompose.version: 1.35.0 (9532ceef3)
  labels:
    io.kompose.service: fcs-dev
  name: fcs-service
  namespace: fcs-dev
spec:
  ports:
    - name: "8999"
      port: 8999
      targetPort: 8999
  selector:
    io.kompose.service: fcs-dev
